# VectorEditor

./: README.md
Source/: CMakeLists.txt  main.cpp
Source/Abstraction/ControlsFactories/: ControlsFactory.cpp  ControlsFactory.h
Source/Abstraction/ControlsFactories/Controls/: Button.hpp  ControlElement.hpp  Label.hpp  LineEdit.hpp  Window.hpp
Source/Abstraction/ControlsFactories/Controls/Linux/: LinuxButton.cpp  LinuxButton.h  LinuxLabel.cpp  LinuxLabel.h  LinuxLineEdit.cpp  LinuxLineEdit.h  LinuxWindow.cpp  LinuxWindow.h
Source/Abstraction/ControlsFactories/Controls/Windows/: WindowsButton.cpp  WindowsButton.h  WindowsLabel.cpp  WindowsLabel.h  WindowsLineEdit.cpp  WindowsLineEdit.h  WindowsWindow.cpp  WindowsWindow.h
Source/Abstraction/GUIMediator/: GUIMediator.cpp  GUIMediator.h  Mediator.h
Source/Abstraction/GUIObserver/: EventManager.cpp  EventManager.h  Subscriber.h
Source/Abstraction/GUIObserver/Subscribers/: ChangeCursorSubscriber.cpp  ChangeCursorSubscriber.h  ShowNotificationSubscriber.cpp  ShowNotificationSubscriber.h  ToolbarSubscriber.cpp  ToolbarSubscriber.h
Source/Abstraction/GUIState/: CreatingState.cpp  CreatingState.h  EditingState.cpp  EditingState.h  GUIState.cpp  GUIState.h
Source/AbstractionComponents/Abstraction/: Abstraction.h
Source/AbstractionComponents/AbstractionObserver/: EventManager.cpp  EventManager.h  IEventManager.h
Source/AbstractionComponents/AbstractionState/: EditingState.cpp  EditingState.h
Source/AbstractionComponents/ControlsFactories/: ControlsFactory.cpp
Source/AbstractionComponents/ControlsFactories/Controls/: ILabel.h  IWindow.h
Source/AbstractionComponents/ControlsFactories/Controls/Linux/: LinuxButton.cpp  LinuxLabel.cpp  LinuxLineEdit.h
Source/AbstractionComponents/ControlsFactories/Controls/Windows/: WindowsLabel.cpp  WindowsWindow.cpp  WindowsWindow.h
Source/Common/: Color.h
Source/ImplementorComponents/Commands/: ChangeColorCommand.cpp  ChangeColorCommand.h  CopyCommand.h  CreateCommand.cpp  CreateCommand.h  GroupCommand.cpp  GroupCommand.h  ICommand.h  UnselectCommand.cpp
Source/ImplementorComponents/ImageFilters/: ImageFilterBlur.cpp  ImageFilterContrastIncrease.cpp  ImageFilterContrastIncrease.h  ImageFilterGetter.hpp  ImageFilterLightning.cpp  ImageFilterRetro.cpp  ImageFilterRetro.h  ImageFilterToBlackWhite.cpp
Source/ImplementorComponents/Implementor/: IImplementor.h  Implementor.h
Source/ImplementorComponents/Primitive/Painter/: WindowsPainter.cpp
Source/ImplementorComponents/Primitive/Primitives/: Circle.h  Composite.h  Rectangle.h
Source/Mock/: MockControlElements.cpp  MockControlElements.h
Source/Realization/: Editor.cpp  Editor.h
Source/Realization/Commands/: ChangeColorCommand.cpp  ChangeColorCommand.h  ChangeSizeCommand.cpp  ChangeSizeCommand.h  Command.h  CopyCommand.cpp  CopyCommand.h  CreateCommand.cpp  CreateCommand.h  DeleteCommand.cpp  DeleteCommand.h  GroupCommand.cpp  GroupCommand.h  MoveCommand.cpp  MoveCommand.h  SelectCommand.cpp  SelectCommand.h  UnselectCommand.cpp  UnselectCommand.h
Source/Realization/ImageFilters/: ImageFilterBlur.cpp  ImageFilterBlur.h  ImageFilterComponent.h  ImageFilterContrastIncrease.cpp  ImageFilterContrastIncrease.h  ImageFilterDecorator.hpp  ImageFilterGetter.hpp  ImageFilterHelpers.hpp  ImageFilterLightning.cpp  ImageFilterLightning.h  ImageFilterRetro.cpp  ImageFilterRetro.h  ImageFilterToBlackWhite.cpp  ImageFilterToBlackWhite.h
Source/Realization/Primitive/: Primitive.cpp  Primitive.h  PrimitiveHelpers.hpp
Source/Realization/Primitive/Painter/: LinuxPainter.cpp  LinuxPainter.h  Painter.h  WindowsPainter.cpp  WindowsPainter.h
Source/Realization/Primitive/Primitives/: Circle.cpp  Circle.h  Composite.cpp  Composite.h  Line.cpp  Line.h  Rectangle.cpp  Rectangle.h
src/: CMakeLists.txt
src/AbstractionComponents/Abstraction/: Abstraction.cpp  IAbstraction.h
src/AbstractionComponents/AbstractionObserver/: ISubscriber.h
src/AbstractionComponents/AbstractionState/: AbstractionState.cpp  AbstractionState.h  CreatingState.cpp  CreatingState.h
src/Common/: Color.cpp  Color.h  CommonDefines.h  RasterImage.cpp  RasterImage.h
src/Mock/: MockControlElements.h
(+48 files in other folders)
